--- a/BrainTumour-main/templates/index.html
+++ b/BrainTumour-main/templates/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <div class = "top">
-    <h1 style="text-align:center">Brain tumour detection</h1>
+    <h1 style="text-align:center">Breast Cancer detection</h1>
     <h3 style="text-align:center" >upload Scan Image here:</h3>
     <form class="form-control" action="/upload", method="post" enctype="multipart/form-data">
      <input type="file"  accept="image/png, image/jpeg" name = "given_img">    
@@ -38,20 +38,20 @@
     </div>
 <div class = "middle">
     <h2>What is this?</h2>
-    <p>This is a website for brain tumour detection, an algorithm based on deep neural networks.Upload scanned brain image here and the DNN model will
+    <p>This is a website Breast cancer detection, an algorithm based on deep neural networks.Upload scanned breast cancer image here and the DNN model will
         predict if the person has brain tumour.
     </p>
     <p>If you are interested in more details and implementation, check out our github profiles!</p>
 
 </div>
 <div class="bottom">
-    <a class="footer-link" href="https://www.linkedin.com/in/hruthik-chevuri-1307491a3/">LinkedIn</a>
-    <a class="footer-link" href="https://twitter.com/Hruthik14160773">Twitter</a>
-    <a class="footer-link" href="https://github.com/ChakradarReddy/BrainTumour">Github</a>
+    <a class="footer-link" href="https://www.linkedin.com/in/mohith-sathyanarayanan-020a87175/">LinkedIn</a>
+    <a class="footer-link" href="https://twitter.com/Karthik8ch">Twitter</a>
+    <a class="footer-link" href="https://github.com/mohithsathyanarayanan/SPE-MAJOR-PROJECT">Github</a>
     <h4>Who are we?</h4>
-    <p>We are Hruthik Chevuri and Chakradar Reddy, both studying engineering in IIIT Bangalore. This is our project for the SPE course.
+    <p>We are Mohith Sathyanarayanan and Ch karthik, we are studying engineering in computer science at IIIT-Bangalore. This is our project for the SPE course.
     </p>
-    <p class = "copyright">© 2022 Hruthik and Chakradar</p>
+    <p class = "copyright">© 2023 Mohith and Karthik</p>
   </div>
 
 </body>
